--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ deb/
 
 # Test binary, built with `go test -c`
 *.test
+*.json
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
