reduce IPv6 filter size below BPF_MAXINSNS
To be able to run without any privileges we need to fit the filters into
BPF_MAXINSNS aka 4096 instructions. Before this change we're at

    $ llvm-objdump --section=socket/ipv6 -S rake_bpfel.o | tail -n 2
    ;   return process_packet(skb, ETH_P_IPV6, bpf_ktime_get_ns(), bpf_get_prandom_u32(), NULL);
        4792:   95 00 00 00 00 00 00 00   exit
    $ llvm-objdump --section=socket/ipv4 -S rake_bpfel.o | tail -n 2
        2519:   bf 90 00 00 00 00 00 00   r0 = r9
        2520:   95 00 00 00 00 00 00 00   exit

Now the programs are significantly smaller:

    $ llvm-objdump --section=socket/ipv6 -S rake_bpfel.o | tail -n 2
        2294:  bf 90 00 00 00 00 00 00  r0 = r9
        2295:  95 00 00 00 00 00 00 00  exit
    $ llvm-objdump --section=socket/ipv4 -S rake_bpfel.o | tail -n 2
        2012:  bf 90 00 00 00 00 00 00  r0 = r9
        2013:  95 00 00 00 00 00 00 00  exit

The main insight enabling this is that we waste a lot of time /
instructions hashing the same bytes over and over. Instead we can
has the individual parts, and then combine the hashes as required.

Another nice side effect is that the filter is quite a bit faster:

    name              old time/op  new time/op  delta
    Rakelimit/IPv4-8   533ns ± 1%   385ns ± 3%  -27.75%  (p=0.008 n=5+5)
    Rakelimit/IPv6-8   883ns ± 3%   417ns ± 3%  -52.82%  (p=0.008 n=5+5)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: push
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Set up Go 1.x
@@ -18,10 +18,10 @@ jobs:
     - name: Install clang
       run: |
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key 2>/dev/null | sudo apt-key add -
-        echo 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main' | sudo tee /etc/apt/sources.list.d/clang.list
+        echo 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-12 main' | sudo tee /etc/apt/sources.list.d/clang.list
         # Only update the llvm repo, this is a lot faster.
         sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/clang.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
-        sudo apt-get install -y clang-9
+        sudo apt-get install -y --no-install-recommends clang-12
 
     - name: Check lint
       # gofmt doesn't report any changes
@@ -29,5 +29,5 @@ jobs:
 
     - name: Run tests
       run: |
-        sudo sysctl -w net.core.optmem_max=64000
-        sudo -E env "PATH=$PATH" go test ./...
+        sudo sysctl -w net.core.optmem_max=22528
+        go test -tags cgotest -exec sudo ./...
